package io.github.tt432.eyelib.util.data_attach;

public class DataAttachmentContainer extends DataAttachmentMapStorage implements IDataAttachmentContainer {
}
